@@ -14,30 +14,32 @@
 package io.trino.plugin.deltalake.transactionlog.checkpoint;
 
 import com.google.common.collect.ImmutableSet;
+import com.google.inject.Inject;
 import io.airlift.json.JsonCodec;
+import io.trino.filesystem.Location;
 import io.trino.filesystem.TrinoFileSystem;
 import io.trino.filesystem.TrinoFileSystemFactory;
 import io.trino.filesystem.TrinoOutputFile;
 import io.trino.plugin.deltalake.transactionlog.DeltaLakeTransactionLogEntry;
 import io.trino.plugin.deltalake.transactionlog.TableSnapshot;
+import io.trino.plugin.deltalake.transactionlog.TableSnapshot.MetadataAndProtocolEntry;
 import io.trino.plugin.deltalake.transactionlog.TransactionLogAccess;
 import io.trino.plugin.hive.FileFormatDataSourceStats;
 import io.trino.plugin.hive.NodeVersion;
+import io.trino.spi.TrinoException;
 import io.trino.spi.connector.ConnectorSession;
 import io.trino.spi.connector.SchemaTableName;
 import io.trino.spi.type.TypeManager;
 
-import javax.inject.Inject;
-
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.UncheckedIOException;
+import java.util.List;
 import java.util.Optional;
 
 import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkState;
-import static com.google.common.collect.MoreCollectors.toOptional;
-import static io.trino.filesystem.Locations.appendPath;
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static io.trino.plugin.deltalake.DeltaLakeErrorCode.DELTA_LAKE_INVALID_SCHEMA;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogParser.LAST_CHECKPOINT_FILENAME;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogUtil.getTransactionLogDir;
 import static io.trino.plugin.deltalake.transactionlog.checkpoint.CheckpointEntryIterator.EntryType.ADD;
@@ -93,16 +95,19 @@ public class CheckpointWriterManager
             CheckpointBuilder checkpointBuilder = new CheckpointBuilder();
 
             TrinoFileSystem fileSystem = fileSystemFactory.create(session);
-            Optional<DeltaLakeTransactionLogEntry> checkpointMetadataLogEntry = snapshot
+            List<DeltaLakeTransactionLogEntry> checkpointLogEntries = snapshot
                     .getCheckpointTransactionLogEntries(
                             session,
-                            ImmutableSet.of(METADATA),
+                            ImmutableSet.of(METADATA, PROTOCOL),
                             checkpointSchemaManager,
                             typeManager,
                             fileSystem,
-                            fileFormatDataSourceStats)
-                    .collect(toOptional());
-            if (checkpointMetadataLogEntry.isPresent()) {
+                            fileFormatDataSourceStats,
+                            Optional.empty())
+                    .filter(entry -> entry.getMetaData() != null || entry.getProtocol() != null)
+                    .collect(toImmutableList());
+
+            if (!checkpointLogEntries.isEmpty()) {
                 // TODO HACK: this call is required only to ensure that cachedMetadataEntry is set in snapshot (https://github.com/trinodb/trino/issues/12032),
                 // so we can read add entries below this should be reworked so we pass metadata entry explicitly to getCheckpointTransactionLogEntries,
                 // and we should get rid of `setCachedMetadata` in TableSnapshot to make it immutable.
@@ -110,25 +115,35 @@ public class CheckpointWriterManager
                 transactionLogAccess.getMetadataEntry(snapshot, session);
 
                 // register metadata entry in writer
-                checkState(checkpointMetadataLogEntry.get().getMetaData() != null, "metaData not present in log entry");
-                checkpointBuilder.addLogEntry(checkpointMetadataLogEntry.get());
+                DeltaLakeTransactionLogEntry metadataLogEntry = checkpointLogEntries.stream()
+                        .filter(logEntry -> logEntry.getMetaData() != null)
+                        .findFirst()
+                        .orElseThrow(() -> new TrinoException(DELTA_LAKE_INVALID_SCHEMA, "Metadata not found in transaction log for " + snapshot.getTable()));
+                DeltaLakeTransactionLogEntry protocolLogEntry = checkpointLogEntries.stream()
+                        .filter(logEntry -> logEntry.getProtocol() != null)
+                        .findFirst()
+                        .orElseThrow(() -> new TrinoException(DELTA_LAKE_INVALID_SCHEMA, "Protocol not found in transaction log for " + snapshot.getTable()));
+
+                checkpointBuilder.addLogEntry(metadataLogEntry);
+                checkpointBuilder.addLogEntry(protocolLogEntry);
 
                 // read remaining entries from checkpoint register them in writer
                 snapshot.getCheckpointTransactionLogEntries(
                                 session,
-                                ImmutableSet.of(PROTOCOL, TRANSACTION, ADD, REMOVE, COMMIT),
+                                ImmutableSet.of(TRANSACTION, ADD, REMOVE, COMMIT),
                                 checkpointSchemaManager,
                                 typeManager,
                                 fileSystem,
-                                fileFormatDataSourceStats)
+                                fileFormatDataSourceStats,
+                                Optional.of(new MetadataAndProtocolEntry(metadataLogEntry.getMetaData(), protocolLogEntry.getProtocol())))
                         .forEach(checkpointBuilder::addLogEntry);
             }
 
             snapshot.getJsonTransactionLogEntries()
                     .forEach(checkpointBuilder::addLogEntry);
 
-            String transactionLogDirectory = getTransactionLogDir(snapshot.getTableLocation());
-            String targetFile = appendPath(transactionLogDirectory, String.format("%020d.checkpoint.parquet", newCheckpointVersion));
+            Location transactionLogDir = Location.of(getTransactionLogDir(snapshot.getTableLocation()));
+            Location targetFile = transactionLogDir.appendPath("%020d.checkpoint.parquet".formatted(newCheckpointVersion));
             CheckpointWriter checkpointWriter = new CheckpointWriter(typeManager, checkpointSchemaManager, trinoVersion);
             CheckpointEntries checkpointEntries = checkpointBuilder.build();
             TrinoOutputFile checkpointFile = fileSystemFactory.create(session).newOutputFile(targetFile);
@@ -136,7 +151,7 @@ public class CheckpointWriterManager
 
             // update last checkpoint file
             LastCheckpoint newLastCheckpoint = new LastCheckpoint(newCheckpointVersion, checkpointEntries.size(), Optional.empty());
-            String checkpointPath = appendPath(transactionLogDirectory, LAST_CHECKPOINT_FILENAME);
+            Location checkpointPath = transactionLogDir.appendPath(LAST_CHECKPOINT_FILENAME);
             TrinoOutputFile outputFile = fileSystem.newOutputFile(checkpointPath);
             try (OutputStream outputStream = outputFile.createOrOverwrite()) {
                 outputStream.write(lastCheckpointCodec.toJsonBytes(newLastCheckpoint));
